# template

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: main.yml
app/: package.json  tsconfig.json
app/scripts/: deploy_service.js
app/service-clients/: greeter.ts
app/src/: main.ts
app/test/: greeter.spec.ts  service.spec.ts
application/client-test/: config.js  package.json
application/client-test/test/: oasis-test.js
service/: Cargo.toml
service/src/: main.rs
services/: Cargo.toml
src/: lib.rs
